[project]
name = "opsboard"
version = "0.1.0"
description = "Internal operations and inventory platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"
