[project]
name = "opsboard"
version = "0.1.0"
description = "Internal operations and inventory platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
]

[[project.authors]]
name = "OpsBoard Team"
email = "ops-eng@internal.example.com"

[project.urls]
Repository = "https://github.com/internal/opsboard"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
